Fixing logout issue on mobile

--- a/docroot/sites/all/themes/ambitious/sass/issue-fixing.scss
+++ b/docroot/sites/all/themes/ambitious/sass/issue-fixing.scss
@@ -1120,7 +1120,7 @@ fieldset.group-hidden {
     }
      @include breakpoint(520px){
       li{
-        padding:0 17px;
+        padding:0 10px;
       }
     } 
   }
