--- a/docroot/sites/all/themes/ambitious/sass/layouts/header.scss
+++ b/docroot/sites/all/themes/ambitious/sass/layouts/header.scss
@@ -847,9 +847,9 @@ nav {
       }
     }
     @include breakpoint($mobile) {
-      max-width:100%;
-      float:none;
-      text-align:center;
+      max-width:90%;
+      float:inherit;
+      text-align:initial;
     }
     li {
       position:relative;
